tests/expectations/compiler/finalize/mapping_operations_in_inline_fail.out
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:8:5
     |
   8 |     Mapping::set(values, 0u8, 1u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372034]: `Mapping::set` must be inside a `final fn` or a `final` block.
    --> compiler-test:8:5
     |
   8 |     Mapping::set(values, 0u8, 1u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:9:5
     |
   9 |     Mapping::get_or_use(account, self.caller, 1u64);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372034]: `Mapping::get_or_use` must be inside a `final fn` or a `final` block.
    --> compiler-test:9:5
     |
   9 |     Mapping::get_or_use(account, self.caller, 1u64);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:10:5
     |
  10 |     Mapping::get(values, 1u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372034]: `Mapping::get` must be inside a `final fn` or a `final` block.
    --> compiler-test:10:5
     |
  10 |     Mapping::get(values, 1u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:14:5
     |
  14 |     Mapping::set(values, 0u8, 1u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372034]: `Mapping::set` must be inside a `final fn` or a `final` block.
    --> compiler-test:14:5
     |
  14 |     Mapping::set(values, 0u8, 1u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:15:5
     |
  15 |     Mapping::get_or_use(account, self.caller, 1u64);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372034]: `Mapping::get_or_use` must be inside a `final fn` or a `final` block.
    --> compiler-test:15:5
     |
  15 |     Mapping::get_or_use(account, self.caller, 1u64);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372067]: This operation can only be used in a final fn, a final block, or script.
    --> compiler-test:16:5
     |
  16 |     Mapping::get(values, 0u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372034]: `Mapping::get` must be inside a `final fn` or a `final` block.
    --> compiler-test:16:5
     |
  16 |     Mapping::get(values, 0u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
